// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stress 1`] = `
Array [
  Cmd {
    "data": "Joanne",
    "id": 5,
    "type": "pure",
  },
  Cmd {
    "data": "Sylvia",
    "id": 6,
    "type": "pure",
  },
  Cmd {
    "data": "Rene",
    "id": 7,
    "type": "pure",
  },
  Cmd {
    "data": "Jack",
    "id": 9,
    "type": "pure",
  },
  Cmd {
    "data": "Emilio",
    "id": 10,
    "type": "pure",
  },
  Cmd {
    "data": "Letha",
    "id": 11,
    "type": "pure",
  },
  Cmd {
    "data": "Rickie",
    "id": 15,
    "type": "pure",
  },
  Cmd {
    "data": "Sarah",
    "id": 17,
    "type": "pure",
  },
  Cmd {
    "data": "Enola",
    "id": 23,
    "type": "pure",
  },
  Cmd {
    "data": "Kip",
    "id": 25,
    "type": "pure",
  },
  Cmd {
    "data": "Jack",
    "id": 27,
    "type": "pure",
  },
  Cmd {
    "data": "Hermann",
    "id": 30,
    "type": "pure",
  },
  Cmd {
    "data": "Kariane",
    "id": 31,
    "type": "pure",
  },
  Cmd {
    "data": "Nestor",
    "id": 32,
    "type": "pure",
  },
  Cmd {
    "data": "Lauren",
    "id": 35,
    "type": "pure",
  },
  Cmd {
    "data": "Kip",
    "id": 36,
    "type": "pure",
  },
  Cmd {
    "data": "Sylvia",
    "id": 40,
    "type": "pure",
  },
  Cmd {
    "data": "Henri",
    "id": 45,
    "type": "pure",
  },
  Cmd {
    "data": "Thad",
    "id": 46,
    "type": "pure",
  },
  Cmd {
    "data": "Henri",
    "id": 52,
    "type": "pure",
  },
  Cmd {
    "data": "Florida",
    "id": 53,
    "type": "pure",
  },
  Cmd {
    "data": "Rickie",
    "id": 58,
    "type": "pure",
  },
  Cmd {
    "data": "Kariane",
    "id": 60,
    "type": "pure",
  },
  Cmd {
    "data": "Anastasia",
    "id": 63,
    "type": "pure",
  },
  Cmd {
    "data": "Hans",
    "id": 69,
    "type": "pure",
  },
  Cmd {
    "data": "Aurelio",
    "id": 74,
    "type": "pure",
  },
  Cmd {
    "data": "Florida",
    "id": 76,
    "type": "pure",
  },
  Cmd {
    "data": "Jack",
    "id": 82,
    "type": "pure",
  },
  Cmd {
    "data": "Braeden",
    "id": 84,
    "type": "pure",
  },
  Cmd {
    "data": "Sylvia",
    "id": 86,
    "type": "pure",
  },
  Cmd {
    "data": "Toby",
    "id": 87,
    "type": "pure",
  },
  Cmd {
    "data": "Nelson",
    "id": 88,
    "type": "pure",
  },
  Cmd {
    "data": "Letha",
    "id": 89,
    "type": "pure",
  },
  Cmd {
    "data": "Jalon",
    "id": 95,
    "type": "pure",
  },
  Cmd {
    "data": "Bradly",
    "id": 96,
    "type": "pure",
  },
  Cmd {
    "data": "Frederik",
    "id": 98,
    "type": "pure",
  },
  Cmd {
    "data": "Florida",
    "id": 103,
    "type": "pure",
  },
  Cmd {
    "data": "start",
    "id": 105,
    "type": "pure",
  },
  Cmd {
    "data": "Amalia",
    "id": 8,
    "type": "lock",
  },
  Cmd {
    "data": "Sarah",
    "id": 12,
    "type": "lock",
  },
  Cmd {
    "data": "Carmella",
    "id": 13,
    "type": "lock",
  },
  Cmd {
    "data": "Kimberly",
    "id": 18,
    "type": "lock",
  },
  Cmd {
    "data": "Kariane",
    "id": 21,
    "type": "lock",
  },
  Cmd {
    "data": "Sylvia",
    "id": 28,
    "type": "lock",
  },
  Cmd {
    "data": "Lee",
    "id": 29,
    "type": "lock",
  },
  Cmd {
    "data": "Everett",
    "id": 33,
    "type": "lock",
  },
  Cmd {
    "data": "Carmella",
    "id": 34,
    "type": "lock",
  },
  Cmd {
    "data": "Lucie",
    "id": 37,
    "type": "lock",
  },
  Cmd {
    "data": "Everett",
    "id": 39,
    "type": "lock",
  },
  Cmd {
    "data": "Dominique",
    "id": 41,
    "type": "lock",
  },
  Cmd {
    "data": "Kiera",
    "id": 42,
    "type": "lock",
  },
  Cmd {
    "data": "Emilio",
    "id": 47,
    "type": "lock",
  },
  Cmd {
    "data": "Lucie",
    "id": 48,
    "type": "lock",
  },
  Cmd {
    "data": "Braeden",
    "id": 50,
    "type": "lock",
  },
  Cmd {
    "data": "Marquis",
    "id": 51,
    "type": "lock",
  },
  Cmd {
    "data": "Kariane",
    "id": 56,
    "type": "lock",
  },
  Cmd {
    "data": "Rylan",
    "id": 57,
    "type": "lock",
  },
  Cmd {
    "data": "Lauren",
    "id": 59,
    "type": "lock",
  },
  Cmd {
    "data": "Kip",
    "id": 62,
    "type": "lock",
  },
  Cmd {
    "data": "Kirsten",
    "id": 65,
    "type": "lock",
  },
  Cmd {
    "data": "Jack",
    "id": 67,
    "type": "lock",
  },
  Cmd {
    "data": "Bradly",
    "id": 70,
    "type": "lock",
  },
  Cmd {
    "data": "Sarah",
    "id": 71,
    "type": "lock",
  },
  Cmd {
    "data": "Everett",
    "id": 77,
    "type": "lock",
  },
  Cmd {
    "data": "Hermann",
    "id": 78,
    "type": "lock",
  },
  Cmd {
    "data": "Hank",
    "id": 83,
    "type": "lock",
  },
  Cmd {
    "data": "Griffin",
    "id": 92,
    "type": "lock",
  },
  Cmd {
    "data": "Haleigh",
    "id": 93,
    "type": "lock",
  },
  Cmd {
    "data": "Elise",
    "id": 97,
    "type": "lock",
  },
  Cmd {
    "data": "Keeley",
    "id": 101,
    "type": "lock",
  },
  Cmd {
    "data": "Makenna",
    "id": 104,
    "type": "lock",
  },
  Cmd {
    "data": "Emilio",
    "id": 14,
    "type": "effect",
  },
  Cmd {
    "data": "Hans",
    "id": 16,
    "type": "effect",
  },
  Cmd {
    "data": "Alvena",
    "id": 19,
    "type": "effect",
  },
  Cmd {
    "data": "Rylan",
    "id": 20,
    "type": "effect",
  },
  Cmd {
    "data": "Arne",
    "id": 22,
    "type": "effect",
  },
  Cmd {
    "data": "Griffin",
    "id": 24,
    "type": "effect",
  },
  Cmd {
    "data": "Dagmar",
    "id": 26,
    "type": "effect",
  },
  Cmd {
    "data": "Aurelio",
    "id": 38,
    "type": "effect",
  },
  Cmd {
    "data": "Ollie",
    "id": 43,
    "type": "effect",
  },
  Cmd {
    "data": "Guiseppe",
    "id": 44,
    "type": "effect",
  },
  Cmd {
    "data": "Cecilia",
    "id": 49,
    "type": "effect",
  },
  Cmd {
    "data": "Brenna",
    "id": 54,
    "type": "effect",
  },
  Cmd {
    "data": "Cecilia",
    "id": 55,
    "type": "effect",
  },
  Cmd {
    "data": "Iva",
    "id": 61,
    "type": "effect",
  },
  Cmd {
    "data": "Alexane",
    "id": 64,
    "type": "effect",
  },
  Cmd {
    "data": "Kariane",
    "id": 66,
    "type": "effect",
  },
  Cmd {
    "data": "Berniece",
    "id": 68,
    "type": "effect",
  },
  Cmd {
    "data": "Amalia",
    "id": 72,
    "type": "effect",
  },
  Cmd {
    "data": "Soledad",
    "id": 73,
    "type": "effect",
  },
  Cmd {
    "data": "Chandler",
    "id": 75,
    "type": "effect",
  },
  Cmd {
    "data": "Lucienne",
    "id": 79,
    "type": "effect",
  },
  Cmd {
    "data": "Nicholaus",
    "id": 80,
    "type": "effect",
  },
  Cmd {
    "data": "Abdul",
    "id": 81,
    "type": "effect",
  },
  Cmd {
    "data": "Kariane",
    "id": 85,
    "type": "effect",
  },
  Cmd {
    "data": "Johnson",
    "id": 90,
    "type": "effect",
  },
  Cmd {
    "data": "Nestor",
    "id": 91,
    "type": "effect",
  },
  Cmd {
    "data": "Theodora",
    "id": 94,
    "type": "effect",
  },
  Cmd {
    "data": "Frederik",
    "id": 99,
    "type": "effect",
  },
  Cmd {
    "data": "Dell",
    "id": 100,
    "type": "effect",
  },
  Cmd {
    "data": "Rylan",
    "id": 102,
    "type": "effect",
  },
]
`;

exports[`stress 2`] = `
Leftist {
  "left": Leftist {
    "left": Leftist {
      "left": Leftist {
        "left": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Rylan",
                "id": 20,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Kariane",
                "id": 66,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Kirsten",
              "id": 65,
              "type": "lock",
            },
          },
          "rank": 3,
          "right": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Alvena",
                "id": 19,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Berniece",
                "id": 68,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Jack",
              "id": 67,
              "type": "lock",
            },
          },
          "value": Cmd {
            "data": "Kimberly",
            "id": 18,
            "type": "lock",
          },
        },
        "rank": 4,
        "right": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Sarah",
                "id": 71,
                "type": "lock",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": Leftist {
                "left": null,
                "rank": 1,
                "right": null,
                "value": Cmd {
                  "data": "Soledad",
                  "id": 73,
                  "type": "effect",
                },
              },
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Amalia",
                "id": 72,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Bradly",
              "id": 70,
              "type": "lock",
            },
          },
          "rank": 3,
          "right": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Chandler",
                "id": 75,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Everett",
                "id": 77,
                "type": "lock",
              },
            },
            "value": Cmd {
              "data": "Florida",
              "id": 76,
              "type": "pure",
            },
          },
          "value": Cmd {
            "data": "Aurelio",
            "id": 74,
            "type": "pure",
          },
        },
        "value": Cmd {
          "data": "Hans",
          "id": 69,
          "type": "pure",
        },
      },
      "rank": 5,
      "right": Leftist {
        "left": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Alexane",
                "id": 64,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Lucienne",
                "id": 79,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Hermann",
              "id": 78,
              "type": "lock",
            },
          },
          "rank": 3,
          "right": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Kip",
                "id": 62,
                "type": "lock",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Nicholaus",
                "id": 80,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Kariane",
              "id": 21,
              "type": "lock",
            },
          },
          "value": Cmd {
            "data": "Anastasia",
            "id": 63,
            "type": "pure",
          },
        },
        "rank": 4,
        "right": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": Leftist {
                "left": null,
                "rank": 1,
                "right": null,
                "value": Cmd {
                  "data": "Abdul",
                  "id": 81,
                  "type": "effect",
                },
              },
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Iva",
                "id": 61,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Hank",
                "id": 83,
                "type": "lock",
              },
            },
            "value": Cmd {
              "data": "Jack",
              "id": 82,
              "type": "pure",
            },
          },
          "rank": 3,
          "right": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Arne",
                "id": 22,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Kariane",
                "id": 85,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Braeden",
              "id": 84,
              "type": "pure",
            },
          },
          "value": Cmd {
            "data": "Kariane",
            "id": 60,
            "type": "pure",
          },
        },
        "value": Cmd {
          "data": "Sarah",
          "id": 17,
          "type": "pure",
        },
      },
      "value": Cmd {
        "data": "Rene",
        "id": 7,
        "type": "pure",
      },
    },
    "rank": 6,
    "right": Leftist {
      "left": Leftist {
        "left": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Lauren",
                "id": 59,
                "type": "lock",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Toby",
                "id": 87,
                "type": "pure",
              },
            },
            "value": Cmd {
              "data": "Sylvia",
              "id": 86,
              "type": "pure",
            },
          },
          "rank": 3,
          "right": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Hans",
                "id": 16,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Letha",
                "id": 89,
                "type": "pure",
              },
            },
            "value": Cmd {
              "data": "Nelson",
              "id": 88,
              "type": "pure",
            },
          },
          "value": Cmd {
            "data": "Rickie",
            "id": 58,
            "type": "pure",
          },
        },
        "rank": 4,
        "right": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Johnson",
                "id": 90,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Nestor",
                "id": 91,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Rylan",
              "id": 57,
              "type": "lock",
            },
          },
          "rank": 3,
          "right": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Griffin",
                "id": 24,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Haleigh",
                "id": 93,
                "type": "lock",
              },
            },
            "value": Cmd {
              "data": "Griffin",
              "id": 92,
              "type": "lock",
            },
          },
          "value": Cmd {
            "data": "Kariane",
            "id": 56,
            "type": "lock",
          },
        },
        "value": Cmd {
          "data": "Enola",
          "id": 23,
          "type": "pure",
        },
      },
      "rank": 5,
      "right": Leftist {
        "left": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Brenna",
                "id": 54,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": Leftist {
                "left": null,
                "rank": 1,
                "right": null,
                "value": Cmd {
                  "data": "Theodora",
                  "id": 94,
                  "type": "effect",
                },
              },
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Cecilia",
                "id": 55,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Amalia",
              "id": 8,
              "type": "lock",
            },
          },
          "rank": 3,
          "right": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Elise",
                "id": 97,
                "type": "lock",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Frederik",
                "id": 98,
                "type": "pure",
              },
            },
            "value": Cmd {
              "data": "Bradly",
              "id": 96,
              "type": "pure",
            },
          },
          "value": Cmd {
            "data": "Jalon",
            "id": 95,
            "type": "pure",
          },
        },
        "rank": 4,
        "right": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Frederik",
                "id": 99,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Dell",
                "id": 100,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Florida",
              "id": 53,
              "type": "pure",
            },
          },
          "rank": 3,
          "right": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Dagmar",
                "id": 26,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Rylan",
                "id": 102,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Keeley",
              "id": 101,
              "type": "lock",
            },
          },
          "value": Cmd {
            "data": "Henri",
            "id": 52,
            "type": "pure",
          },
        },
        "value": Cmd {
          "data": "Kip",
          "id": 25,
          "type": "pure",
        },
      },
      "value": Cmd {
        "data": "Rickie",
        "id": 15,
        "type": "pure",
      },
    },
    "value": Cmd {
      "data": "Sylvia",
      "id": 6,
      "type": "pure",
    },
  },
  "rank": 5,
  "right": Leftist {
    "left": Leftist {
      "left": Leftist {
        "left": Leftist {
          "left": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Kip",
              "id": 36,
              "type": "pure",
            },
          },
          "rank": 2,
          "right": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Lucie",
              "id": 37,
              "type": "lock",
            },
          },
          "value": Cmd {
            "data": "Lauren",
            "id": 35,
            "type": "pure",
          },
        },
        "rank": 3,
        "right": Leftist {
          "left": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Aurelio",
              "id": 38,
              "type": "effect",
            },
          },
          "rank": 2,
          "right": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Everett",
              "id": 39,
              "type": "lock",
            },
          },
          "value": Cmd {
            "data": "Carmella",
            "id": 34,
            "type": "lock",
          },
        },
        "value": Cmd {
          "data": "Letha",
          "id": 11,
          "type": "pure",
        },
      },
      "rank": 4,
      "right": Leftist {
        "left": Leftist {
          "left": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Everett",
              "id": 33,
              "type": "lock",
            },
          },
          "rank": 2,
          "right": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Dominique",
              "id": 41,
              "type": "lock",
            },
          },
          "value": Cmd {
            "data": "Sylvia",
            "id": 40,
            "type": "pure",
          },
        },
        "rank": 3,
        "right": Leftist {
          "left": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Kiera",
              "id": 42,
              "type": "lock",
            },
          },
          "rank": 2,
          "right": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Ollie",
              "id": 43,
              "type": "effect",
            },
          },
          "value": Cmd {
            "data": "Sarah",
            "id": 12,
            "type": "lock",
          },
        },
        "value": Cmd {
          "data": "Nestor",
          "id": 32,
          "type": "pure",
        },
      },
      "value": Cmd {
        "data": "Emilio",
        "id": 10,
        "type": "pure",
      },
    },
    "rank": 4,
    "right": Leftist {
      "left": Leftist {
        "left": Leftist {
          "left": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Guiseppe",
              "id": 44,
              "type": "effect",
            },
          },
          "rank": 2,
          "right": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Henri",
              "id": 45,
              "type": "pure",
            },
          },
          "value": Cmd {
            "data": "Kariane",
            "id": 31,
            "type": "pure",
          },
        },
        "rank": 3,
        "right": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Lee",
                "id": 29,
                "type": "lock",
              },
            },
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Sylvia",
              "id": 28,
              "type": "lock",
            },
          },
          "rank": 2,
          "right": Leftist {
            "left": null,
            "rank": 1,
            "right": null,
            "value": Cmd {
              "data": "Emilio",
              "id": 47,
              "type": "lock",
            },
          },
          "value": Cmd {
            "data": "Thad",
            "id": 46,
            "type": "pure",
          },
        },
        "value": Cmd {
          "data": "Hermann",
          "id": 30,
          "type": "pure",
        },
      },
      "rank": 3,
      "right": Leftist {
        "left": Leftist {
          "left": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Emilio",
                "id": 14,
                "type": "effect",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Cecilia",
                "id": 49,
                "type": "effect",
              },
            },
            "value": Cmd {
              "data": "Lucie",
              "id": 48,
              "type": "lock",
            },
          },
          "rank": 3,
          "right": Leftist {
            "left": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Braeden",
                "id": 50,
                "type": "lock",
              },
            },
            "rank": 2,
            "right": Leftist {
              "left": null,
              "rank": 1,
              "right": null,
              "value": Cmd {
                "data": "Marquis",
                "id": 51,
                "type": "lock",
              },
            },
            "value": Cmd {
              "data": "Carmella",
              "id": 13,
              "type": "lock",
            },
          },
          "value": Cmd {
            "data": "start",
            "id": 105,
            "type": "pure",
          },
        },
        "rank": 2,
        "right": Leftist {
          "left": null,
          "rank": 1,
          "right": null,
          "value": Cmd {
            "data": "Makenna",
            "id": 104,
            "type": "lock",
          },
        },
        "value": Cmd {
          "data": "Florida",
          "id": 103,
          "type": "pure",
        },
      },
      "value": Cmd {
        "data": "Jack",
        "id": 27,
        "type": "pure",
      },
    },
    "value": Cmd {
      "data": "Jack",
      "id": 9,
      "type": "pure",
    },
  },
  "value": Cmd {
    "data": "Joanne",
    "id": 5,
    "type": "pure",
  },
}
`;
